fixed spacing errors between boxs

--- a/jamitchWeb.css
+++ b/jamitchWeb.css
@@ -113,41 +113,28 @@ button:hover {
 
 /*---------------------------------------------------------*/
 
-.subtitle {
-    font-size: 24px;
-    font-weight: bold;
-    color: #d7263d;
-    margin: 0;
-    padding: 0;
-}
-
-/* Container styles */
-.container {
-    width: calc(80% - 30px);
-    /* Initial width */
-    margin: 0 auto;
-    padding: 20px;
-    transition: width 0.5s ease, margin-left 0.5s ease;
-    /* Add transition for smoother animation */
-    /* this holds the bento box, and i don't remember why */
-}
-
-/*---------------------------------------------------------*/
-
 /* bento box */
+
+.container {
+    width: 94vw;
+    height: 95vh;
+    margin: 0 auto;
+    transition: width 0.5s ease, margin-left 0.5s ease;
+}
+
 .bento-box-container {
+    width: 100%;
+    height: 100%;
     font-size: 30px;
     color: #f5f3f5;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 25px;
     background-color: #050505;
-    /* Marble background color */
-    padding: 20px;
     border-radius: 10px;
     /* box-shadow: 0 0 20px #fefefe; */
-    margin-top: 20px;
-    /* Add margin to separate from the sidebar */
+    margin-top: 25px;
+
 }
 
 /* Item styles */
@@ -156,9 +143,7 @@ button:hover {
     padding: 20px;
     border-radius: 15px;
     /* box-shadow: 0 0px 8px #fefefe; */
-    /* Slate text color */
     z-index: 0;
-    /* Ensure the bento box appears below the sidebar */
 }
 
 .about-me-box {
